# pan_tilt_control_system

./: .gitignore  README.md  vivado.jou  vivado_pid13726.str
Docs/Code standard/: file_name.h
MATLAB/Control system/: ComparisonOfStepResponsens_RealVsSim.mlx  PD_FROM_C_TO_MATLAB.mlx  motor_tf_estimate.mlx  panStepResponse_RealSystem.mlx  pan_controller_est_mechanical_coupling.slx  pan_controller_est_mechanical_coupling.slx.original  pan_controller_est_mechanical_coupling.slxc  pan_controller_estimate.slx  pan_controller_estimate.slxc  pid_controller_draft.c  raw_pan_values.txt  raw_tilt_values.txt  system_model.slx  system_model.slx.original  system_model.slxc  tf_estimate_mechanical_coupling.mlx  tiltStepResponse_RealSystem.mlx  tilt_controller_est_mechanical_coupling.slx  tilt_controller_est_mechanical_coupling.slxc  tilt_controller_estimate.slx  tilt_controller_estimate.slxc  transfer_function_analysis.mlx
VHDL/: .gitignore  .gitignore.save  PYNQ-Z2_v1.0.xdc
VHDL/ip_repo/: component.xml
VHDL/movement_interpreter/: project_1.xpr
VHDL/pwm_generator/: component.xml  pwm_generator.xpr  pwm_generator_wrapper.xsa
VHDL/translator/: translator.xpr
cpp/: CMakeLists.txt
cpp/include/: prio_with_surf.h  priority_vision.h  uart.h  vision.h
cpp/src/: main.cpp  prio_with_surf.cpp  priority_vision.cpp  uart.cpp  vision.cpp
cpp/test_uart/: CMakeLists.txt  main_test_uart.cpp  uart.cpp
embedded/RB4_v2/: .ccsproject  .cproject  .project  read_me_setup_guide.txt
embedded/spi_c/: .gitignore
embedded/testing_encoder/: .ccsproject  .cproject  .project  control.c  control.h  glob_def.h  gpio.c  gpio.h  main.c  spi.c  spi.h  status_led.c  status_led.h  tm4c123gh6pm.h  uart.c  uart.h
python/: main.py
python/modules/: hello_world.py
rb4_uart_test/: CMakeLists.txt  main.cpp  rb4_test_log.py  uart_test.cpp  uart_test.h
rb4_uart_test/python_uart_tests/: 1_UART_TEST_NOTES.txt  2_UART_TEST_NOTES.txt  uart_cap.py  (+3 more)
(+1479 files in other folders)
